@@ -1,6 +1,6 @@
 ---
 name: Test-MockObject
-version: 1.06
+version: 1.07
 author: []
 abstract: Perl extension for emulating troublesome interfaces
 license: perl
@@ -17,11 +17,11 @@ build_requires:
 provides:
   Test::MockObject:
     file: lib/Test/MockObject.pm
-    version: 1.06
+    version: 1.07
   Test::MockObject::Extends:
     file: lib/Test/MockObject/Extends.pm
-    version: 1.06
-generated_by: Module::Build version 0.2709
+    version: 1.07
+generated_by: Module::Build version 0.2801
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
